--- a/Vue/vueAnnexe.twig
+++ b/Vue/vueAnnexe.twig
@@ -20,6 +20,7 @@
             <li> Ajouter/supprimer des Équipes </li>
             <li> Ajouter/supprimer des Compétitions </li>
         </ul>
+        A noter que la gestion des erreurs dues à la suppression de ces champs n'a pas été entièrement prise en compte.
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <div class="col-6">
